fix(Popups): 🐛 invert icon in dark mode

--- a/skinStyles/extensions/Popups/ext.popups.main.less
+++ b/skinStyles/extensions/Popups/ext.popups.main.less
@@ -5,10 +5,14 @@
  * Module: ext.popups.main
  * Version: REL1_39 a40ebc1
  *
- * Date: 2022-11-28
+ * Date: 2024-06-14
 */
 
 @import '../../../resources/variables.less';
+
+.popups-icon {
+	filter: var( --filter-invert );
+}
 
 /* popup.less */
 .mwe-popups {
